--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,18 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    testCompile 'com.willowtreeapps.assertk:assertk-jvm:0.21'
+    testImplementation(
+            'org.assertj:assertj-core:3.12.2',
+            "org.junit.jupiter:junit-jupiter-api:5.6.0"
+    )
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.0")
 }
 
+
+test {
+    useJUnitPlatform()
+}
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
@@ -35,5 +45,5 @@ dependencies {
     compile "io.arrow-kt:arrow-fx:$arrow_version"
     compile "io.arrow-kt:arrow-optics:$arrow_version"
     compile "io.arrow-kt:arrow-syntax:$arrow_version"
-    kapt    "io.arrow-kt:arrow-meta:$arrow_version"
+    kapt "io.arrow-kt:arrow-meta:$arrow_version"
 }
